Update 'xyajczaun-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:fd097700efe30207c499a02f6822bcee751b1437@sha256:e84f922ba1b016fbc5a82ed1275b65e178c830b5ddff9919b63d2b14f284db02

--- a/components/xyajczaun-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/xyajczaun-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xyajczaun-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:fd097700efe30207c499a02f6822bcee751b1437@sha256:e84f922ba1b016fbc5a82ed1275b65e178c830b5ddff9919b63d2b14f284db02
+          name: container-image
